deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flipper-front
spec:
  selector:
    app: flipper-front
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
