deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flipper-front
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: front.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flipper-front
                port:
                  number: 80
